Added diagnostic scores

--- a/1_code/0_get_sample.ipynb
+++ b/1_code/0_get_sample.ipynb
@@ -29,7 +29,17 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lindenmp/opt/anaconda3/envs/neurodev_cs_predictive/lib/python3.7/site-packages/outdated/utils.py:18: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.3.7, the latest is 0.3.8.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  **kwargs\n"
+     ]
+    }
+   ],
    "source": [
     "sys.path.append('/Users/lindenmp/Google-Drive-Penn/work/research_projects/neurodev_cs_predictive/1_code/')\n",
     "from func import set_proj_env, my_get_cmap, rank_int"
@@ -145,6 +155,8 @@
     "demog = pd.read_csv(os.path.join(os.environ['DATADIR'], 'external/pncDataFreeze20170905/n1601_dataFreeze/demographics/n1601_demographics_go1_20161212.csv'))\n",
     "# Brain volume\n",
     "brain_vol = pd.read_csv(os.path.join(os.environ['DATADIR'], 'external/pncDataFreeze20170905/n1601_dataFreeze/neuroimaging/t1struct/n1601_ctVol20170412.csv'))\n",
+    "# Clinical diagnostic \n",
+    "clinical = pd.read_csv(os.path.join(os.environ['DATADIR'], 'external/pncDataFreeze20170905/n1601_dataFreeze/clinical/n1601_goassess_psych_summary_vars_20131014.csv'))\n",
     "# GOASSESS Bifactor scores\n",
     "goassess = pd.read_csv(os.path.join(os.environ['DATADIR'], 'external/GO1_clinical_factor_scores_psychosis_split_BIFACTOR.csv'))\n",
     "\n",
@@ -156,293 +168,11 @@
     "df = pd.merge(df, rest_qa, on=['scanid', 'bblid']) # rest_qa\n",
     "df = pd.merge(df, demog, on=['scanid', 'bblid']) # demog\n",
     "df = pd.merge(df, brain_vol, on=['scanid', 'bblid']) # brain_vol\n",
+    "df = pd.merge(df, clinical, on=['scanid', 'bblid']) # clinical\n",
     "df = pd.merge(df, goassess, on=['bblid']) # goassess\n",
     "\n",
     "print(df.shape[0])\n",
     "df.set_index(['bblid', 'scanid'], inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>timepoint_x</th>\n",
-       "      <th>smrytrt_psychinpt</th>\n",
-       "      <th>psychoactiveMedPsychv2</th>\n",
-       "      <th>psychoactiveMedMedicalv2</th>\n",
-       "      <th>incidentalFindingExclude</th>\n",
-       "      <th>medicalratingExcludev1</th>\n",
-       "      <th>healthExcludev2</th>\n",
-       "      <th>ltnExcludev2</th>\n",
-       "      <th>squeakycleanExclude</th>\n",
-       "      <th>psychoactiveMedMedical</th>\n",
-       "      <th>...</th>\n",
-       "      <th>mprage_antsCT_vol_DeepGrayMatter</th>\n",
-       "      <th>mprage_antsCT_vol_BrainStem</th>\n",
-       "      <th>mprage_antsCT_vol_Cerebellum</th>\n",
-       "      <th>mprage_antsCT_vol_TBV</th>\n",
-       "      <th>Overall_Psychopathology</th>\n",
-       "      <th>Psychosis_Positive</th>\n",
-       "      <th>Psychosis_NegativeDisorg</th>\n",
-       "      <th>AnxiousMisery</th>\n",
-       "      <th>Externalizing</th>\n",
-       "      <th>Fear</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>bblid</th>\n",
-       "      <th>scanid</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>80961</th>\n",
-       "      <th>2632</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>52141.098450</td>\n",
-       "      <td>17099.116230</td>\n",
-       "      <td>140667.147488</td>\n",
-       "      <td>1.467376e+06</td>\n",
-       "      <td>1.946241</td>\n",
-       "      <td>1.250946</td>\n",
-       "      <td>1.375173</td>\n",
-       "      <td>-0.737588</td>\n",
-       "      <td>0.845164</td>\n",
-       "      <td>-2.437746</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80199</th>\n",
-       "      <th>2637</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>56126.058254</td>\n",
-       "      <td>19814.056864</td>\n",
-       "      <td>150808.843822</td>\n",
-       "      <td>1.590630e+06</td>\n",
-       "      <td>1.854055</td>\n",
-       "      <td>0.370510</td>\n",
-       "      <td>-0.925523</td>\n",
-       "      <td>-0.883597</td>\n",
-       "      <td>0.130829</td>\n",
-       "      <td>0.742890</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80179</th>\n",
-       "      <th>2643</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>38010.047782</td>\n",
-       "      <td>16670.210102</td>\n",
-       "      <td>136221.640940</td>\n",
-       "      <td>1.310120e+06</td>\n",
-       "      <td>0.495788</td>\n",
-       "      <td>-0.824844</td>\n",
-       "      <td>1.762409</td>\n",
-       "      <td>1.037908</td>\n",
-       "      <td>0.622578</td>\n",
-       "      <td>0.950200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81005</th>\n",
-       "      <th>2644</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>46560.045350</td>\n",
-       "      <td>16218.452418</td>\n",
-       "      <td>138964.706566</td>\n",
-       "      <td>1.455427e+06</td>\n",
-       "      <td>0.059965</td>\n",
-       "      <td>-1.015043</td>\n",
-       "      <td>1.395996</td>\n",
-       "      <td>0.373101</td>\n",
-       "      <td>1.358093</td>\n",
-       "      <td>0.982293</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80812</th>\n",
-       "      <th>2646</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>46874.693698</td>\n",
-       "      <td>20525.091818</td>\n",
-       "      <td>141902.010418</td>\n",
-       "      <td>1.540885e+06</td>\n",
-       "      <td>2.080370</td>\n",
-       "      <td>0.274750</td>\n",
-       "      <td>-1.888498</td>\n",
-       "      <td>0.261131</td>\n",
-       "      <td>-1.500084</td>\n",
-       "      <td>1.584978</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 175 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              timepoint_x  smrytrt_psychinpt  psychoactiveMedPsychv2  \\\n",
-       "bblid scanid                                                           \n",
-       "80961 2632              1                  0                       1   \n",
-       "80199 2637              1                  0                       0   \n",
-       "80179 2643              1                  1                       1   \n",
-       "81005 2644              1                  0                       0   \n",
-       "80812 2646              1                  0                       0   \n",
-       "\n",
-       "              psychoactiveMedMedicalv2  incidentalFindingExclude  \\\n",
-       "bblid scanid                                                       \n",
-       "80961 2632                           0                         0   \n",
-       "80199 2637                           0                         0   \n",
-       "80179 2643                           0                         0   \n",
-       "81005 2644                           0                         0   \n",
-       "80812 2646                           0                         0   \n",
-       "\n",
-       "              medicalratingExcludev1  healthExcludev2  ltnExcludev2  \\\n",
-       "bblid scanid                                                          \n",
-       "80961 2632                         0                0             1   \n",
-       "80199 2637                         0                0             0   \n",
-       "80179 2643                         0                0             1   \n",
-       "81005 2644                         1                1             1   \n",
-       "80812 2646                         0                0             0   \n",
-       "\n",
-       "              squeakycleanExclude  psychoactiveMedMedical  ...  \\\n",
-       "bblid scanid                                               ...   \n",
-       "80961 2632                      1                       0  ...   \n",
-       "80199 2637                      0                       0  ...   \n",
-       "80179 2643                      1                       0  ...   \n",
-       "81005 2644                      1                       0  ...   \n",
-       "80812 2646                      1                       0  ...   \n",
-       "\n",
-       "              mprage_antsCT_vol_DeepGrayMatter  mprage_antsCT_vol_BrainStem  \\\n",
-       "bblid scanid                                                                  \n",
-       "80961 2632                        52141.098450                 17099.116230   \n",
-       "80199 2637                        56126.058254                 19814.056864   \n",
-       "80179 2643                        38010.047782                 16670.210102   \n",
-       "81005 2644                        46560.045350                 16218.452418   \n",
-       "80812 2646                        46874.693698                 20525.091818   \n",
-       "\n",
-       "              mprage_antsCT_vol_Cerebellum  mprage_antsCT_vol_TBV  \\\n",
-       "bblid scanid                                                        \n",
-       "80961 2632                   140667.147488           1.467376e+06   \n",
-       "80199 2637                   150808.843822           1.590630e+06   \n",
-       "80179 2643                   136221.640940           1.310120e+06   \n",
-       "81005 2644                   138964.706566           1.455427e+06   \n",
-       "80812 2646                   141902.010418           1.540885e+06   \n",
-       "\n",
-       "              Overall_Psychopathology  Psychosis_Positive  \\\n",
-       "bblid scanid                                                \n",
-       "80961 2632                   1.946241            1.250946   \n",
-       "80199 2637                   1.854055            0.370510   \n",
-       "80179 2643                   0.495788           -0.824844   \n",
-       "81005 2644                   0.059965           -1.015043   \n",
-       "80812 2646                   2.080370            0.274750   \n",
-       "\n",
-       "              Psychosis_NegativeDisorg  AnxiousMisery  Externalizing      Fear  \n",
-       "bblid scanid                                                                    \n",
-       "80961 2632                    1.375173      -0.737588       0.845164 -2.437746  \n",
-       "80199 2637                   -0.925523      -0.883597       0.130829  0.742890  \n",
-       "80179 2643                    1.762409       1.037908       0.622578  0.950200  \n",
-       "81005 2644                    1.395996       0.373101       1.358093  0.982293  \n",
-       "80812 2646                   -1.888498       0.261131      -1.500084  1.584978  \n",
-       "\n",
-       "[5 rows x 175 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
    ]
   },
   {
@@ -454,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +224,7 @@
        "array([2., 1.])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +244,7 @@
        "949"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +264,7 @@
        "675"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +383,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,12 +401,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "header = ['squeakycleanExclude','ageAtScan1', 'ageAtScan1_Years','sex','race2','handednessv2', 'averageManualRating', 'dti64QAManualScore', 'restProtocolValidationStatus', 'restExclude',\n",
-    "          'dti64MeanAbsRMS','dti64MeanRelRMS','dti64MaxAbsRMS','dti64MaxRelRMS','mprage_antsCT_vol_TBV', 'averageManualRating',\n",
+    "          'dti64MeanAbsRMS','dti64MeanRelRMS','dti64MaxAbsRMS','dti64MaxRelRMS','mprage_antsCT_vol_TBV', 'averageManualRating',  'goassessSmryMood', 'goassessSmryMan', 'goassessSmryDep',\n",
+    "          'goassessSmryEat', 'goassessSmryBul', 'goassessSmryAno', 'goassessSmryAnx', 'goassessSmryGad', 'goassessSmrySep', 'goassessSmryPhb', 'goassessSmrySoc', 'goassessSmryPan',\n",
+    "          'goassessSmryAgr', 'goassessSmryOcd', 'goassessSmryPtd', 'goassessSmryPsy', 'goassessSmryDel', 'goassessSmryHal', 'goassessSmryHalAv', 'goassessSmryHalAs', 'goassessSmryHalVh',\n",
+    "          'goassessSmryHalOh', 'goassessSmryHalTh', 'goassessSmryBeh', 'goassessSmryAdd', 'goassessSmryOdd', 'goassessSmryCon', 'goassessSmryPrimePos1', 'goassessSmryPrimeTot',\n",
+    "          'goassessSmryPrimePos2', 'goassessSmryPsychOverallRtg',\n",
     "          'Overall_Psychopathology','Psychosis_Positive','Psychosis_NegativeDisorg']\n",
     "df.to_csv(os.path.join(outputdir, 'df.csv'), columns = header)"
    ]
@@ -690,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
