updated psychosis spectrum grouping variable

--- a/1_code/0_get_sample.ipynb
+++ b/1_code/0_get_sample.ipynb
@@ -157,6 +157,7 @@
     "brain_vol = pd.read_csv(os.path.join(os.environ['DATADIR'], 'external/pncDataFreeze20170905/n1601_dataFreeze/neuroimaging/t1struct/n1601_ctVol20170412.csv'))\n",
     "# Clinical diagnostic \n",
     "clinical = pd.read_csv(os.path.join(os.environ['DATADIR'], 'external/pncDataFreeze20170905/n1601_dataFreeze/clinical/n1601_goassess_psych_summary_vars_20131014.csv'))\n",
+    "clinical_ps = pd.read_csv(os.path.join(os.environ['DATADIR'], 'external/pncDataFreeze20170905/n1601_dataFreeze/clinical/n1601_diagnosis_dxpmr_20170509.csv'))\n",
     "# GOASSESS Bifactor scores\n",
     "goassess = pd.read_csv(os.path.join(os.environ['DATADIR'], 'external/GO1_clinical_factor_scores_psychosis_split_BIFACTOR.csv'))\n",
     "\n",
@@ -169,6 +170,7 @@
     "df = pd.merge(df, demog, on=['scanid', 'bblid']) # demog\n",
     "df = pd.merge(df, brain_vol, on=['scanid', 'bblid']) # brain_vol\n",
     "df = pd.merge(df, clinical, on=['scanid', 'bblid']) # clinical\n",
+    "df = pd.merge(df, clinical_ps, on=['scanid', 'bblid']) # clinical\n",
     "df = pd.merge(df, goassess, on=['bblid']) # goassess\n",
     "\n",
     "print(df.shape[0])\n",
@@ -411,6 +413,7 @@
     "          'goassessSmryAgr', 'goassessSmryOcd', 'goassessSmryPtd', 'goassessSmryPsy', 'goassessSmryDel', 'goassessSmryHal', 'goassessSmryHalAv', 'goassessSmryHalAs', 'goassessSmryHalVh',\n",
     "          'goassessSmryHalOh', 'goassessSmryHalTh', 'goassessSmryBeh', 'goassessSmryAdd', 'goassessSmryOdd', 'goassessSmryCon', 'goassessSmryPrimePos1', 'goassessSmryPrimeTot',\n",
     "          'goassessSmryPrimePos2', 'goassessSmryPsychOverallRtg',\n",
+    "          'goassessDxpmr4',\n",
     "          'Overall_Psychopathology','Psychosis_Positive','Psychosis_NegativeDisorg']\n",
     "df.to_csv(os.path.join(outputdir, 'df.csv'), columns = header)"
    ]
