Added new exclusion for Glasser parc

--- a/1_code/0_get_sample.ipynb
+++ b/1_code/0_get_sample.ipynb
@@ -12,6 +12,7 @@
     "import numpy as np\n",
     "import nibabel as nib\n",
     "import scipy.io as sio\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# Stats\n",
     "import scipy as sp\n",
@@ -51,10 +52,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parc_str = 'schaefer'\n",
-    "parc_scale = 200\n",
+    "parc_str = 'schaefer' # 'schaefer' 'lausanne' 'glasser'\n",
+    "parc_scale = 200 # 200/400 | 125/250 | 360\n",
     "edge_weight = 'streamlineCount'\n",
     "parcel_names, parcel_loc, drop_parcels, num_parcels = set_proj_env(parc_str = parc_str, parc_scale = parc_scale, edge_weight = edge_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if parc_str == 'schaefer' or parc_str == 'glasser':\n",
+    "    exclude_str = 't1Exclude'\n",
+    "else:\n",
+    "    exclude_str = 'fsFinalExclude'"
    ]
   },
   {
@@ -66,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +218,7 @@
     "print('N after initial exclusion:', df.shape[0])\n",
     "\n",
     "# 2) T1 exclusion\n",
-    "df = df[df['t1Exclude'] == 0]\n",
+    "df = df[df[exclude_str] == 0]\n",
     "print('N after T1 exclusion:', df.shape[0])\n",
     "\n",
     "# 3) Diffusion exclusion\n",
@@ -217,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +239,7 @@
        "array([2., 1.])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +259,7 @@
        "949"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +279,7 @@
        "675"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +398,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +428,7 @@
     "          'goassessSmryPrimePos2', 'goassessSmryPsychOverallRtg',\n",
     "          'goassessDxpmr4',\n",
     "          'Overall_Psychopathology','Psychosis_Positive','Psychosis_NegativeDisorg']\n",
-    "df.to_csv(os.path.join(outputdir, 'df.csv'), columns = header)"
+    "df.to_csv(os.path.join(outputdir, exclude_str+'_df.csv'), columns = header)"
    ]
   },
   {
@@ -427,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -557,11 +570,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(os.path.join(outputdir, 'df_gradients.csv'), columns = header)"
+    "df.to_csv(os.path.join(outputdir, exclude_str+'_df_gradients.csv'), columns = header)"
    ]
   }
  ],
